# events-app-nlp-service

./: pyproject.toml  requirements.txt
nlp_service/: nlp_controller.py  nlp_service.py
src/: .flaskenv  app.py  nlp_controller.py
src/services/: nlp_service.py  translate_service.py
