[tool.poetry]
name = "sentiment-analysis-service"
version = "0.1.0"
description = ""
authors = ["Roman Ortynskyi <50491616+lazyDefender@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
textblob = "^0.18.0.post0"
python-dotenv = "^1.0.1"
vadersentiment = "^3.3.2"
langdetect = "^1.0.9"
boto3 = "^1.34.100"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
